--- a/examples/tutorials/monitors.ipynb
+++ b/examples/tutorials/monitors.ipynb
@@ -464,7 +464,7 @@
    "hash": "f7a3b17dc27950022b3a097db529a6e9000db08ac14a3825be3b4e322625075e"
   },
   "kernelspec": {
-   "display_name": "Python 3.7.10 64-bit ('base': conda)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -478,9 +478,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
