--- a/examples/tutorials/serialize_fields.ipynb
+++ b/examples/tutorials/serialize_fields.ipynb
@@ -31,9 +31,16 @@
     "mode = modesolver.get_mode()\n",
     "\n",
     "plt.figure()\n",
-    "mode.plot(value_type=\"Imaginary\")\n",
-    "plt.show()\n"
+    "mode.plot(operation=\"Imaginary\")\n",
+    "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -52,7 +59,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
