debugging PML EMpy

--- a/examples/structures/mmi.ipynb
+++ b/examples/structures/mmi.ipynb
@@ -37,6 +37,29 @@
     "# Create simulation \n",
     "eme = EME()\n",
     "\n",
+    "# Create source input\n",
+    "starting_center = -0.5 * (num_inputs - 1) * (input_gap + input_width)\n",
+    "n_source = np.ones(mesh) * cladding_index\n",
+    "for inp in [0]:\n",
+    "    center = starting_center + inp * (input_gap + input_width)\n",
+    "    left_edge = center - 0.5 * input_width\n",
+    "    right_edge = center + 0.5 * input_width\n",
+    "    n_source = np.where((left_edge <= x) * (x <= right_edge), core_index, n_source)\n",
+    "\n",
+    "source_channel = MSEMpy(\n",
+    "    wavelength,\n",
+    "    width=None,\n",
+    "    thickness=thickness,\n",
+    "    cladding_index=cladding_index,\n",
+    "    num_modes=num_modes_channels,\n",
+    "    mesh=mesh,\n",
+    "    x=x,\n",
+    "    y=x,\n",
+    "    n=n_source,\n",
+    ")\n",
+    "\n",
+    "eme.add_layer(Layer(source_channel, num_modes_channels, wavelength, input_length * 0.25))\n",
+    "\n",
     "# Create input\n",
     "starting_center = -0.5*(num_inputs-1)*(input_gap+input_width)\n",
     "n_input = np.ones(mesh) * cladding_index\n",
