--- a/examples/structures/mmi.ipynb
+++ b/examples/structures/mmi.ipynb
@@ -27,11 +27,11 @@
     "mmi_width = 5*1e-6\n",
     "mmi_length = 5*1e-6\n",
     "thickness = 0.22*1e-6\n",
-    "mesh=100 # Number of mesh points\n",
+    "mesh=128 # Number of mesh points\n",
     "core_index=Si(wavelength*1e6) # Silicon core\n",
     "cladding_index=SiO2(wavelength*1e6) # Oxide cladding\n",
-    "num_modes_mmi = 2\n",
-    "num_modes_channels = 1\n",
+    "num_modes_mmi = 20\n",
+    "num_modes_channels = 20\n",
     "x = np.linspace(-4e-6,4e-6,mesh)\n",
     "\n",
     "# Create simulation \n",
@@ -56,6 +56,7 @@
     "    x=x,\n",
     "    y=x,\n",
     "    n=n_source,\n",
+    "    PML=True\n",
     ")\n",
     "\n",
     "eme.add_layer(Layer(source_channel, num_modes_channels, wavelength, input_length * 0.25))\n",
@@ -78,7 +79,8 @@
     "    mesh=mesh,\n",
     "    x=x,\n",
     "    y=x,\n",
-    "    n=n_input\n",
+    "    n=n_input,\n",
+    "    PML=True\n",
     ")\n",
     "\n",
     "eme.add_layer(Layer(input_channel, num_modes_channels, wavelength, input_length))  \n",
@@ -98,7 +100,8 @@
     "    mesh=mesh,\n",
     "    x=x,\n",
     "    y=x,\n",
-    "    n=n_middle\n",
+    "    n=n_middle,\n",
+    "    PML=True\n",
     ")\n",
     "\n",
     "eme.add_layer(Layer(middle, num_modes_mmi, wavelength, mmi_length)) \n",
@@ -122,7 +125,8 @@
     "    mesh=mesh,\n",
     "    x=x,\n",
     "    y=x,\n",
-    "    n=n_output\n",
+    "    n=n_output,\n",
+    "    PML=True\n",
     ")\n",
     "\n",
     "eme.add_layer(Layer(output_channel, num_modes_channels, wavelength, output_length))  \n",
