--- a/examples/geometriy_notebooks/taper.ipynb
+++ b/examples/geometriy_notebooks/taper.ipynb
@@ -17,10 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import emepy\n",
-    "from emepy.eme import Layer, EME\n",
-    "from emepy.mode import Mode\n",
-    "from emepy.fd import MSEMpy\n",
+    "from emepy import Layer, EME, Mode, MSEMpy\n",
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
     "\n",
