--- a/examples/geometriy_notebooks/waveguide.ipynb
+++ b/examples/geometriy_notebooks/waveguide.ipynb
@@ -17,8 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from emepy.eme import EME, Layer\n",
-    "from emepy.monitors import Monitor\n",
+    "from emepy import EME, Layer, Monitor\n",
     "from emepy.ann import ANN, MSNeuralNetwork\n",
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
