--- a/examples/geometry_notebooks/directional_coupler.ipynb
+++ b/examples/geometry_notebooks/directional_coupler.ipynb
@@ -139,7 +139,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2/2 [00:00<00:00, 15768.06it/s]\n"
+      "100%|██████████| 2/2 [00:00<00:00, 6990.51it/s]\n"
      ]
     },
     {
@@ -154,7 +154,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1it [00:00, 20867.18it/s]\n"
+      "1it [00:00, 4438.42it/s]\n"
      ]
     },
     {
@@ -171,7 +171,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:00<00:00, 424.18it/s]\n"
+      "100%|██████████| 1/1 [00:00<00:00, 407.89it/s]\n"
      ]
     },
     {
@@ -184,7 +184,7 @@
     {
      "data": {
       "text/plain": [
-       "<simphony.models.Subcircuit at 0x7fe450aada00>"
+       "<simphony.models.Subcircuit at 0x7fa3f19d44c0>"
       ]
      },
      "execution_count": 4,
