--- a/examples/geometry_notebooks/directional_coupler.ipynb
+++ b/examples/geometry_notebooks/directional_coupler.ipynb
@@ -139,7 +139,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2/2 [00:00<00:00, 2873.80it/s]\n"
+      "100%|██████████| 2/2 [00:00<00:00, 8272.79it/s]\n"
      ]
     },
     {
@@ -154,7 +154,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1it [00:00, 3002.37it/s]\n"
+      "1it [00:00, 1351.26it/s]\n"
      ]
     },
     {
@@ -171,7 +171,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:00<00:00, 150.74it/s]\n"
+      "100%|██████████| 1/1 [00:00<00:00, 145.88it/s]\n"
      ]
     },
     {
@@ -184,7 +184,7 @@
     {
      "data": {
       "text/plain": [
-       "<simphony.models.Subcircuit at 0x7f96e51a4c90>"
+       "<simphony.models.Subcircuit at 0x7fe79bb2ec50>"
       ]
      },
      "execution_count": 4,
