fixed all 1e-6 instances

--- a/examples/geometry_notebooks/directional_coupler.ipynb
+++ b/examples/geometry_notebooks/directional_coupler.ipynb
@@ -21,15 +21,15 @@
     "from emepy.tools import Si, SiO2\n",
     "\n",
     "# Geometric parameters\n",
-    "wavelength = 1.55e-6 # Wavelength\n",
-    "width = 0.4e-6  # Width of left waveguide\n",
-    "gap = 0.2e-6 # Gap between waveguides\n",
-    "thickness = 0.22e-6  # Thickness of left waveguide\n",
+    "wavelength = 1.55 # Wavelength\n",
+    "width = 0.4  # Width of left waveguide\n",
+    "gap = 0.2 # Gap between waveguides\n",
+    "thickness = 0.22  # Thickness of left waveguide\n",
     "num_modes=2 # Number of modes\n",
     "mesh=100 # Number of mesh points\n",
     "core_index=Si(wavelength*1e6) # Silicon core\n",
     "cladding_index=SiO2(wavelength*1e6) # Oxide cladding\n",
-    "x = np.linspace(-2e-6,2e-6,mesh)\n",
+    "x = np.linspace(-2,2,mesh)\n",
     "n = np.ones(mesh) * cladding_index"
    ]
   },
@@ -96,8 +96,8 @@
     "    n=n\n",
     ")\n",
     "\n",
-    "eme.add_layer(Layer(single_channel, num_modes, wavelength, 0.7e-6)) \n",
-    "eme.add_layer(Layer(two_channel, num_modes, wavelength, 25e-6))"
+    "eme.add_layer(Layer(single_channel, num_modes, wavelength, 0.7)) \n",
+    "eme.add_layer(Layer(two_channel, num_modes, wavelength, 25))"
    ]
   },
   {
@@ -254,8 +254,11 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "f7a3b17dc27950022b3a097db529a6e9000db08ac14a3825be3b4e322625075e"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.7.10 ('base')",
    "language": "python",
    "name": "python3"
   },
