--- a/examples/geometry_notebooks/mmi.ipynb
+++ b/examples/geometry_notebooks/mmi.ipynb
@@ -137,33 +137,33 @@
     "from emepy.tools import Si, SiO2\n",
     "\n",
     "# Geometric parameters\n",
-    "wavelength = 1.55e-6  # Wavelength\n",
+    "wavelength = 1.55  # Wavelength\n",
     "num_inputs = 1\n",
     "num_outputs = 2\n",
     "\n",
-    "input_width = 0.4e-6\n",
-    "output_width = 0.4e-6\n",
-    "input_gap = 2e-6\n",
-    "output_gap = 2e-6\n",
-    "input_length = 2e-6\n",
-    "output_length = 2e-6\n",
-    "mmi_width = 5e-6\n",
-    "mmi_length = 5e-6\n",
-    "input_taper_width = 1e-6\n",
-    "input_taper_length = 0.5e-6\n",
+    "input_width = 0.4\n",
+    "output_width = 0.4\n",
+    "input_gap = 2\n",
+    "output_gap = 2\n",
+    "input_length = 2\n",
+    "output_length = 2\n",
+    "mmi_width = 5\n",
+    "mmi_length = 5\n",
+    "input_taper_width = 1\n",
+    "input_taper_length = 0.5\n",
     "input_taper_num_steps = 1\n",
-    "output_taper_width = 1e-6\n",
-    "output_taper_length = 0.5e-6\n",
+    "output_taper_width = 1\n",
+    "output_taper_length = 0.5\n",
     "output_taper_num_steps = 1\n",
     "\n",
-    "thickness = 0.22 * 1e-6\n",
+    "thickness = 0.22 * 1\n",
     "mesh = 100  # Number of mesh points\n",
     "core_index = Si(wavelength * 1e6)  # Silicon core\n",
     "cladding_index = SiO2(wavelength * 1e6)  # Oxide cladding\n",
     "num_modes_mmi = 20\n",
     "num_modes_input = 3\n",
     "num_modes_output = 10\n",
-    "x = np.linspace(-4e-6, 4e-6, mesh)\n",
+    "x = np.linspace(-4, 4, mesh)\n",
     "PML = True\n",
     "\n",
     "# Create simulation\n",
