--- a/examples/geometry_notebooks/taper.ipynb
+++ b/examples/geometry_notebooks/taper.ipynb
@@ -22,13 +22,13 @@
     "from matplotlib import pyplot as plt\n",
     "\n",
     "# Geometric parameters\n",
-    "width1 = 0.7e-6  # Width of left waveguide\n",
-    "thickness1 = 0.22e-6  # Thickness of left waveguide\n",
-    "width2 = 0.3e-6  # Width of right waveguide\n",
-    "thickness2 = 0.22e-6  # Thickness of right waveguide\n",
-    "wavelength = 1.55e-6  # Wavelength of light (m)\n",
-    "length = 5e-6  # Length of the waveguides\n",
-    "taper_length = 0.75e-6  # The length of the taper\n",
+    "width1 = 0.7  # Width of left waveguide\n",
+    "thickness1 = 0.22  # Thickness of left waveguide\n",
+    "width2 = 0.3  # Width of right waveguide\n",
+    "thickness2 = 0.22  # Thickness of right waveguide\n",
+    "wavelength = 1.55  # Wavelength of light (m)\n",
+    "length = 5  # Length of the waveguides\n",
+    "taper_length = 0.75  # The length of the taper\n",
     "num_modes = 2 # Number of modes to solve for\n",
     "taper_density = 7 # Number of taper segments\n",
     "mesh=128 # Number of mesh points in each xy dimension\n",
@@ -250,8 +250,11 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "f7a3b17dc27950022b3a097db529a6e9000db08ac14a3825be3b4e322625075e"
+  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.7.10 ('base')",
    "language": "python",
    "name": "python3"
   },
