--- a/examples/tutorials/eigenmode_solver.ipynb
+++ b/examples/tutorials/eigenmode_solver.ipynb
@@ -138,13 +138,13 @@
     "\n",
     "# Create a modesolver object that represents a waveguide cross section\n",
     "fd_solver = MSEMpy(\n",
-    "    1.55e-6,  # Set the wavelength of choice\n",
-    "    0.46e-6,  # Define the width of the waveguide\n",
-    "    0.22e-6,  # Define the thickness of the waveguide\n",
+    "    1.55,  # Set the wavelength of choice\n",
+    "    0.46,  # Define the width of the waveguide\n",
+    "    0.22,  # Define the thickness of the waveguide\n",
     "    mesh=128,  # Set the mesh density\n",
     "    num_modes=1,  # Set the number of modes to solve for\n",
-    "    cladding_width=2.5e-6,  # Define the cladding width (default is same as ANN)\n",
-    "    cladding_thickness=2.5e-6,  # Define the cladding thickness (default is same as ANN)\n",
+    "    cladding_width=2.5,  # Define the cladding width (default is same as ANN)\n",
+    "    cladding_thickness=2.5,  # Define the cladding thickness (default is same as ANN)\n",
     "    core_index=None,  # Define the core refractive index (leave None (default) for Silicon)\n",
     "    cladding_index=None,  # Define the cladding refractive index (leave None (default) for Silicon Dioxide)\n",
     ")\n",
@@ -179,9 +179,9 @@
     "# Create a modesolver object that represents a waveguide cross section\n",
     "ann_solver = MSNeuralNetwork(\n",
     "    ann,  # Our initialized neural network modesolver\n",
-    "    1.55e-6,  # Set the wavelength of choice\n",
-    "    0.46e-6,  # Define the width of the waveguide\n",
-    "    0.22e-6,  # Define the thickness of the waveguide\n",
+    "    1.55,  # Set the wavelength of choice\n",
+    "    0.46,  # Define the width of the waveguide\n",
+    "    0.22,  # Define the thickness of the waveguide\n",
     ")\n",
     "\n",
     "# Solve for the fundamental Eigenmode\n",
@@ -232,7 +232,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
