--- a/examples/tutorials/lumerical.ipynb
+++ b/examples/tutorials/lumerical.ipynb
@@ -23,9 +23,9 @@
     "\n",
     "# Create a modesolver object that represents a waveguide cross section\n",
     "fd_solver = MSLumerical(\n",
-    "    1.55e-6,  # Set the wavelength of choice\n",
-    "    0.46e-6,  # Define the width of the waveguide\n",
-    "    0.22e-6,  # Define the thickness of the waveguide\n",
+    "    1.55,  # Set the wavelength of choice\n",
+    "    0.46,  # Define the width of the waveguide\n",
+    "    0.22,  # Define the thickness of the waveguide\n",
     "    mesh=128,  # Set the mesh density\n",
     "    num_modes=1,  # Set the number of modes to solve for\n",
     "    eme_modes=False\n",
