--- a/examples/geometry_notebooks/bragg_grating.ipynb
+++ b/examples/geometry_notebooks/bragg_grating.ipynb
@@ -129,7 +129,7 @@
     {
      "data": {
       "text/plain": [
-       "<emepy.models.CopyModel at 0x7fe97cc00fd0>"
+       "<emepy.models.CopyModel at 0x7f82ce1b2a10>"
       ]
      },
      "execution_count": 5,
