--- a/examples/geometry_notebooks/adiabatic_taper.ipynb
+++ b/examples/geometry_notebooks/adiabatic_taper.ipynb
@@ -117,11 +117,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "f7a3b17dc27950022b3a097db529a6e9000db08ac14a3825be3b4e322625075e"
-  },
   "kernelspec": {
-   "display_name": "Python 3.7.10 ('base')",
+   "display_name": "Python 3.10.4 ('pmp')",
    "language": "python",
    "name": "python3"
   },
@@ -135,9 +132,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.10.4"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "b8db67128494af189a898d936492a5f384f4e17c5b96054f98b83c5b95b39d0e"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
